Including Dependence Injector on Windows service project

--- a/ArchitectureTemplate.Infrastructure.CrossCutting.IoC/ArchitectureTemplate.Infrastructure.CrossCutting.IoC.csproj
+++ b/ArchitectureTemplate.Infrastructure.CrossCutting.IoC/ArchitectureTemplate.Infrastructure.CrossCutting.IoC.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BootstrapperService.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
